update URL for local

--- a/frontend/src/components/ExploreMenu/ExploreMenu.css
+++ b/frontend/src/components/ExploreMenu/ExploreMenu.css
@@ -24,9 +24,11 @@
     overflow-x: scroll;
 }
 
+/*
 .explore-menu-list::-webkit-scrollbar {
     display: none;
-}
+} */
+
 
 .explore-menu-list-item img {
     width: 7.5vw;
